3.5.3
	+ Revert apache conf change that does not work properly without the
	  httpclose option in haproxy conf (that breaks Outlook Anwyhere)
3.5.2
	+ Fixed http/https wrong redirects using X-Forwarded-Host header
3.5.1
	+ Set proper actions and files in module enable action
3.5
	+ Set version to 3.5
	+ Added support to https access
3.4
	+ Initial release