@@ -120,7 +120,7 @@ sub _innoDbValueHasChanged
 
 # Method: _dbname
 #
-#       This function returns the database name.
+#       This method returns the database name.
 #
 sub _dbname
 {
@@ -134,7 +134,7 @@ sub _dbname
 
 # Method: _dbuser
 #
-#       This function returns the database user.
+#         This method returns the database user.
 #
 sub _dbuser
 {
@@ -148,7 +148,7 @@ sub _dbuser
 
 # Method: _dbpass
 #
-#  This function returns the database user password.
+#         This method returns the database user password.
 #
 sub _dbpass
 {
@@ -163,9 +163,19 @@ sub _dbpass
     return $self->{dbpass};
 }
 
+# Method: _dbhost
+#
+#          This method returns the host used by the database
+#
+#  Default: 127.0.0.1
+sub _dbhost
+{
+    return '127.0.0.1';
+}
+
 # Method: _dbsuperuser
 #
-#  This function returns the database superuser's username
+#          This method returns the database superuser's username
 #
 sub _dbsuperuser
 {
@@ -680,11 +690,14 @@ sub  dumpDB
     my $dbname = $self->_dbname();
     my $dbuser = $self->_dbuser();
     my $dbpass = $self->_dbpass();
+    my $dbhost = $self->_dbhost();
 
     my $args = "-u$dbuser -p$dbpass";
     if ($onlySchema) {
         $args .= ' --no-data';
     }
+    $args .= " -h$dbhost";
+    
     my $dumpCommand = "mysqldump $args $dbname > $tmpFile";
 
     $self->commandAsSuperuser($dumpCommand);
